Add warning display for unhandled events, fun thinking messages
Forward unhandled Claude Code event types to the browser as warnings
with an amber alert style and triangle icon. Use --append-system-prompt
instead of --system-prompt so Claude Code detects the project root from
the git directory rather than traversing parent CLAUDE.md files. Rotate
through playful spinner messages on each thinking event.